# mongodb-opentelemetry-receiver

./: Cargo.toml  README.md  TODO.md  config.yaml
.github/workflows/: build.yml  package-matrix.yml  release.yml  test.yml
crates/component/: Cargo.toml
crates/component/src/: config.rs  consumer.rs  ext.rs  factory.rs  lib.rs  pipeline.rs  server_status.rs
crates/exporters/otlp/: Cargo.toml
crates/exporters/otlp/src/: config.rs  lib.rs
crates/processors/batch/: Cargo.toml
crates/processors/batch/src/: config.rs  lib.rs
crates/receivers/mongodb/: Cargo.toml
crates/receivers/mongodb/src/: attributes.rs  config.rs  document.rs  lib.rs  metrics.rs  scrape.rs
src/: attributes.rs  bfs.rs  config.rs  doc.rs  ext.rs  factory.rs  lib.rs  main.rs  metrics.rs  mongodb.rs  pipeline.rs  resource.rs  scrape.rs  telemetry.rs
src/otlp/: mod.rs
src/prometheus/: mod.rs
