[package]
name = "mongodb-opentelemetry-receiver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mongodb-opentelemetry-receiver"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
serde = "1"
regex = "1"
semver = "1"
lazy_static = "1"
thiserror = "1"
strum = { version = "0", features = ["derive"] }

mongodb = { version = "3" }
prometheus = "0"
opentelemetry = "0"
opentelemetry-otlp = "0"
opentelemetry_sdk = "0"

# opentelemetry-stdout = { version = "0", features = ["trace"] }
# telemetry for the receiver itself
tracing = "0"
tracing-opentelemetry = "0"
tracing-subscriber = { version = "0", features = ["json"] }

# binary only
color-eyre = "0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# dialoguer = "0"
# pretty_assertions = "1"
