[package]
name = "otel-collector-component"
version = "0.1.0"
edition = "2021"
publish = true
authors = ["romnn <contact@romnn.com>"]
description = "Opentelemetry (OTEL) collector component"
license-file = "../../LICENSE"
readme = "./README.md"
documentation = "https://docs.rs/nvbit-rs"
homepage = "https://github.com/romnn/nvbit-rs"
repository = "https://github.com/romnn/nvbit-rs"
categories = [
	"api-bindings",
	"asynchronous",
	"development-tools::profiling",
	"development-tools::debugging",
]
keywords = [
	"otel-collector",
	"opentelemetry",
	"telemetry",
]
exclude = []

[dependencies]
# utils
color-eyre = "0"
thiserror = "1"
lazy_static = "1"
strum = { version = "0", features = ["derive"] }

# parse configs
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
regex = "1"

# pipeline construction
petgraph = "0"

# async
async-trait = "0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0", features = ["sync", "time"] }

# prometheus exporter (TODO)
# prometheus = "0"

# extensions
opentelemetry = "0"
opentelemetry_sdk = "0"
# opentelemetry-stdout = { version = "0", features = ["trace"] }

# telemetry
tracing = "0"
# tracing-opentelemetry = "0"
# tracing-subscriber = { version = "0", features = ["json", "env-filter"] }
