[package]
name = "otel-collector-component"
version = "0.1.0"
edition = "2021"
publish = true
authors = ["romnn <contact@romnn.com>"]
description = "Opentelemetry (OTEL) collector component"
license-file = "../../LICENSE"
readme = "./README.md"
documentation = "https://docs.rs/nvbit-rs"
homepage = "https://github.com/romnn/nvbit-rs"
repository = "https://github.com/romnn/nvbit-rs"
categories = [
	"api-bindings",
	"asynchronous",
	"development-tools::profiling",
	"development-tools::debugging",
]
keywords = [
	"otel-collector",
	"opentelemetry",
	"telemetry",
]
exclude = []

[dependencies]
# utils
color-eyre.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
strum.workspace = true

# parse configs
serde.workspace = true
serde_yaml.workspace = true
regex.workspace = true

# pipeline construction
petgraph = "0"

# async
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

# prometheus exporter (TODO)
# prometheus = "0"

# extensions
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
# opentelemetry-stdout = { version = "0", features = ["trace"] }

# telemetry
tracing.workspace = true
# tracing-opentelemetry = "0"
# tracing-subscriber = { version = "0", features = ["json", "env-filter"] }
