[package]
name = "otel-collector-component"
publish = true
authors = ["romnn <contact@romnn.com>"]
description = "Opentelemetry (OTEL) collector component"
readme = "./README.md"
categories = [
	"api-bindings",
	"asynchronous",
	"development-tools::profiling",
	"development-tools::debugging",
]
keywords = [
	"otel-collector",
	"opentelemetry",
	"telemetry",
]
exclude = []

version.workspace = true
edition.workspace = true
license-file.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
# utils
color-eyre.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
strum.workspace = true

# parse configs
serde.workspace = true
serde_yaml.workspace = true
regex.workspace = true

# pipeline construction
petgraph = "0"

# async
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

# prometheus exporter (TODO)
# prometheus = "0"

# extensions
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
# opentelemetry-stdout = { version = "0", features = ["trace"] }

# telemetry
tracing.workspace = true
# tracing-opentelemetry = "0"
# tracing-subscriber = { version = "0", features = ["json", "env-filter"] }
