[package]
name = "otel-otlp-exporter"
version = "0.1.0"
edition = "2021"
publish = true
authors = ["romnn <contact@romnn.com>"]
description = "Opentelemetry (OTEL) otlp exporter"
license-file = "../../LICENSE"
readme = "./README.md"
documentation = "https://docs.rs/nvbit-rs"
homepage = "https://github.com/romnn/nvbit-rs"
repository = "https://github.com/romnn/nvbit-rs"
categories = [
	"api-bindings",
	"asynchronous",
	"development-tools::profiling",
	"development-tools::debugging",
]
keywords = [
	"otel-collector",
	"opentelemetry",
	"telemetry",
]
exclude = []

[dependencies]
otel-collector-component.workspace = true

# utils
color-eyre.workspace = true
thiserror.workspace = true
lazy_static.workspace = true

# config parsing
serde.workspace = true
serde_yaml.workspace = true
duration-string.workspace = true

# async
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

# telemetry
tracing.workspace = true

# otlp
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-proto = { version = "0" }
tonic = "0"

[dependencies.opentelemetry-otlp]
version = "0"
features = [
	"grpc-tonic",
	"zstd-tonic",
	"gzip-tonic",
	"trace",
	"metrics",
	"logs",
	"tls",
]
