[package]
name = "otel-otlp-exporter"
publish = true
authors = ["romnn <contact@romnn.com>"]
description = "Opentelemetry (OTEL) otlp exporter"
readme = "./README.md"
categories = [
	"api-bindings",
	"asynchronous",
	"development-tools::profiling",
	"development-tools::debugging",
]
keywords = [
	"otel-collector",
	"opentelemetry",
	"telemetry",
]
exclude = []

version.workspace = true
edition.workspace = true
license-file.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
otel-collector-component.workspace = true

# utils
color-eyre.workspace = true
thiserror.workspace = true
lazy_static.workspace = true

# config parsing
serde.workspace = true
serde_yaml.workspace = true
duration-string.workspace = true

# async
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

# telemetry
tracing.workspace = true

# otlp
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-proto = { version = "0" }
tonic = "0"

[dependencies.opentelemetry-otlp]
version = "0"
features = [
	"grpc-tonic",
	"zstd-tonic",
	"gzip-tonic",
	"trace",
	"metrics",
	"logs",
	"tls",
]
