[package]
name = "otel-batch-processor"
version = "0.1.0"
edition = "2021"
publish = true
authors = ["romnn <contact@romnn.com>"]
description = "Opentelemetry (OTEL) batch processor"
license-file = "../../LICENSE"
readme = "./README.md"
documentation = "https://docs.rs/nvbit-rs"
homepage = "https://github.com/romnn/nvbit-rs"
repository = "https://github.com/romnn/nvbit-rs"
categories = [
	"api-bindings",
	"asynchronous",
	"development-tools::profiling",
	"development-tools::debugging",
]
keywords = [
	"otel-collector",
	"opentelemetry",
	"telemetry",
]
exclude = []

[dependencies]
otel-collector-component.workspace = true

# utils
color-eyre.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
# strum = { version = "0", features = ["derive"] }

# tracing
tracing.workspace = true

# config parsing
serde.workspace = true
serde_yaml.workspace = true
duration-string.workspace = true

# async
async-trait.workspace = true
futures.workspace = true
# pin-project = "1"
tokio.workspace = true
tokio-stream.workspace = true
tokio-util = { version = "0", features = ["time"] }

