[package]
name = "otel-batch-processor"
publish = true
authors = ["romnn <contact@romnn.com>"]
description = "Opentelemetry (OTEL) batch processor"
readme = "./README.md"
categories = [
	"api-bindings",
	"asynchronous",
	"development-tools::profiling",
	"development-tools::debugging",
]
keywords = [
	"otel-collector",
	"opentelemetry",
	"telemetry",
]
exclude = []

version.workspace = true
edition.workspace = true
license-file.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
otel-collector-component.workspace = true

# utils
color-eyre.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
# strum = { version = "0", features = ["derive"] }

# tracing
tracing.workspace = true

# config parsing
serde.workspace = true
serde_yaml.workspace = true
duration-string.workspace = true

# async
async-trait.workspace = true
futures.workspace = true
# pin-project = "1"
tokio.workspace = true
tokio-stream.workspace = true
tokio-util = { version = "0", features = ["time"] }

