[package]
name = "otel-mongodb-receiver"
publish = true
authors = ["romnn <contact@romnn.com>"]
description = "Opentelemetry (OTEL) receiver for mongodb"
readme = "./README.md"
categories = [
	"api-bindings",
	"asynchronous",
	"development-tools::profiling",
	"development-tools::debugging",
	"database",
]
keywords = [
	"otel-collector",
	"opentelemetry",
	"mongodb",
	"telemetry",
]
exclude = []

version.workspace = true
edition.workspace = true
license-file.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
otel-collector-component.workspace = true

# utils
color-eyre.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
strum.workspace = true

# mongodb scraping
semver = "1"
mongodb = { version = "3" }

# config parsing
serde.workspace = true
serde_yaml.workspace = true
duration-string.workspace = true

# async
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

# tracing
tracing.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true

